@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-06T16:34:31Z",
+  "timestamp" : "2022-06-07T08:29:36Z",
   "count_outdated" : 179,
   "uniques_outdated" : 80,
-  "count" : 196,
-  "uniques" : 90,
+  "count" : 197,
+  "uniques" : 91,
   "clones" : [
     {
       "timestamp": "2022-05-29T00:00:00Z",
@@ -63,6 +63,13 @@
     },
     {
       "timestamp": "2022-06-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
