@@ -1,5 +1,5 @@
 {
-  "count": 17,
+  "count": 18,
   "uniques": 2,
   "clones": [
     {
@@ -44,6 +44,11 @@
     },
     {
       "timestamp": "2022-06-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-07T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
